--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
 <html>
-	<head>
-		<title>MyTweets</title>
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
-		<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
-	</head>
-	<body>
-		<!--format html below-->
-		<h1>Hello World</h1>
 
-		<script src="components/jquery/dist/jquery.min.js"></script>
-		<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<!--linking code from main js-->
-		<script src="js/main.js"></script>
-	</body>
+<head>
+    <title>MyTweets</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
+</head>
+
+<body>
+    <!--format html below-->
+    <form>
+        Tweet:
+        <br>
+        <input type="text" name="tweeter" placeholder="What's Happening?">
+        <button type="button">Tweet</button>
+        
+    </form>
+
+    <script src="components/jquery/dist/jquery.min.js"></script>
+    <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--linking code from main js-->
+    <script src="js/main.js"></script>
+</body>
+
 </html>
