added git ignore

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <!--format html below-->
+    <div id='form-container'>
     <form>
         Tweet:
         <br>
@@ -16,6 +17,9 @@
         <button type="button">Tweet</button>
         
     </form>
+    </div>
+    <div id="tweet-container">
+    </div>
 
     <script src="components/jquery/dist/jquery.min.js"></script>
     <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
