testing prepend functionality, working

--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,8 @@
     <form>
         Tweet:
         <br>
-        <input type="text" name="tweeter" placeholder="What's Happening?">
-        <button type="button">Tweet</button>
+        <input id="inp" type="text" name="tweeter" placeholder="What's Happening?">
+        <button id="btn" type="button">Tweet</button>
         
     </form>
     </div>
