tweets show up, working on post

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <!--format html below-->
     <div id='form-container'>
     <form>
-        Tweet:
+        <h3>Post A Tweet:</h3>
         <br>
         <input id="inp" type="text" name="tweeter" placeholder="What's Happening?">
         <button id="btn" type="button">Tweet</button>
